--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,6 +22,8 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore -c Release
+    - name: Test
+      run: dotnet test -c Release --no-restore --no-build --settings Default.runsettings --filter "TestCategory!=FailOnCi" --logger trx --collect:"XPlat Code Coverage" --results-directory TestResultsCI /p:CollectCoverage=true /p:CoverletOutput="../TestResultsCI/" /p:MergeWith="../TestResultsCI/coverage.json" /maxcpucount:1 /p:CoverletOutputFormat=\"json,cobertura,opencover\" /p:ExcludeByAttribute=\"Obsolete,GeneratedCodeAttribute,CompilerGeneratedAttribute,ExcludeFromCodeCoverageAttribute\"
     - name: Package
       run: dotnet pack --no-build -c Release
     - name: 'Upload Artifact'
