--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,6 +24,15 @@ jobs:
       run: dotnet build --no-restore -c Release
     - name: Test
       run: dotnet test -c Release --no-restore --no-build --settings Default.runsettings --filter "TestCategory!=FailOnCi" --logger trx --collect:"XPlat Code Coverage" --results-directory TestResultsCI /p:CollectCoverage=true /p:CoverletOutput="../TestResultsCI/" /p:MergeWith="../TestResultsCI/coverage.json" /maxcpucount:1 /p:CoverletOutputFormat=\"json,cobertura,opencover\" /p:ExcludeByAttribute=\"Obsolete,GeneratedCodeAttribute,CompilerGeneratedAttribute,ExcludeFromCodeCoverageAttribute\"
+    - name: Code Coverage Summary Report
+      uses: irongut/CodeCoverageSummary@v1.3.0
+      with:
+        filename: 'TestResultsCI/coverage.cobertura.xml'
+        badge: true
+        format: 'markdown'
+        output: 'both'
+    - name: Write to Job Summary
+      run: cat code-coverage-results.md >> $GITHUB_STEP_SUMMARY
     - name: Package
       run: dotnet pack --no-build -c Release
     - name: 'Upload Artifact'
