feat: use paginated result to reduce http calls

--- a/GitLabTools/GitLabTools.csproj
+++ b/GitLabTools/GitLabTools.csproj
@@ -24,6 +24,12 @@
     <Authors>Markus Blasek</Authors>
     <Company />
   </PropertyGroup>
+  
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+    <_Parameter1>$(AssemblyName).Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
 
   <ItemGroup>
     <None Remove="appsettings.Development.json" />
